@@ -31,6 +31,7 @@ Joshua Krause
 Jeremy Laidman
 Patrick Lin
 Brian Lynch
+Werner Maier
 Thomas Mattsson
 Daniel J McDonald
 Werner Michels
